[project]
name = "openrouter_proxy"
version = "0.1.0"
description = "A reverse proxy for OpenRouter API with key rotation and rate limiting."
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
